Avoid the deprecated URL constructor in the netty observation test
The core modules compile with -Werror, and URL(String) is deprecated as
of Java 20, so the test failed to compile on the JDK 25 build agents and
took the whole build down with it.